# JiraGemAIAgent

./: .env.template  README.md  pyproject.toml
src/: main.py
src/coder/: code_loader.py  code_updater.py  develop.py  scheduler.py
src/geminiai/: coder_prompt.py  examples.json  gemini_ai.py  model_responses.py
src/git_integrator/: create_pr.py  git_activities.py  git_repository.py
src/helpers/: ticket_info_extractor.py
src/logger/: custom_logger.py
src/models/: ticket_model.py
src/views/: code_view.py  home_view.py
